# imgui-cpp98

./: .gitignore  CMakeLists.txt  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_win32.cpp
docs/: README.md
examples/example_glfw_opengl3/: main.cpp
examples/example_win32_opengl3/: build_mingw.bat  main.cpp
misc/fonts/: binary_to_compressed_c.cpp
misc/freetype/: imgui_freetype.cpp  imgui_freetype.h
